# chatbot

./: .gitignore  Dockerfile  LICENSE  README.md  build_index.py  config.py  main.py  pyproject.toml  requirements.txt  run-locally.sh  sc-chatbot.py  tasks.py
faiss_index/: index.faiss  index.pkl
sc_hk_card_db/: chroma.sqlite3
