[tool.poetry]
name = "sc-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"
openai = "^1.75.0"
dotenv = "^0.9.9"
langchain = "^0.3.24"
langchain-openai = "^0.3.14"
tiktoken = "^0.9.0"
langchain-community = "^0.3.22"
chromadb = "^1.0.7"
streamlit-modal = "^0.1.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
